tests/ui/pattern/non-structural-match-types.stderr
error: closure `{closure@$DIR/non-structural-match-types.rs:9:17: 9:19}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:9:9
   |
LL |         const { || {} } => {}
   |         ^^^^^^^^^^^^^^^ closure can't be used in patterns

error: `async` block `{async block@$DIR/non-structural-match-types.rs:12:17: 12:22}` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { async {} } => {}
   |         ^^^^^^^^^^^^^^^^^^ `async` block can't be used in patterns

error: aborting due to 2 previous errors

